--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,13 @@
 	"require": {
 		"php": ">=5.4"
 	},
+	"require-dev": {
+		"symfony/finder": "^3.1",
+		"symfony/console": "^3.1"
+	},
+	"autoload-dev": {
+		"files": ["app/autoload.php"]
+	},
 	"support": {
 		"email": "ekokurniawanbs@gmail.com"
 	}
