--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 #app/commands export-ignore
 #app/console export-ignore
-#composer.json
-#LICENSE
+#composer.json export-ignore
+#LICENSE export-ignore
+#.gitattributes export-ignore
