--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,8 @@
 #app/commands export-ignore
 #app/console export-ignore
+#dev export-ignore
 #composer.json export-ignore
 #LICENSE export-ignore
 #.gitattributes export-ignore
+#.gitignore export-ignore
+#.editorconfig export-ignore
