--- a/.gitattributes.dist
+++ b/.gitattributes.dist
@@ -2,7 +2,8 @@ app/console export-ignore
 app/command export-ignore
 dev export-ignore
 composer.json export-ignore
-LICENSE export-ignore
+package.json export-ignore
+gulpfile.js export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
 .editorconfig export-ignore
